# embassy-imxrt

./: AGENTS.md  Cargo.toml  ci.sh  deny.toml
.github/: copilot-instructions.md
.github/workflows/: check.yml  nostd.yml
examples/rt633/: Cargo.toml
examples/rt685s-evk/: .gdbinit  Cargo.toml  README.md
examples/rt685s-evk-performance-tracing/: Cargo.toml  README.md  build.rs
examples/rt685s-evk-performance-tracing/.cargo/: config.toml
examples/rt685s-evk/.cargo/: config.toml
examples/rt685s-evk/src/: lib.rs
examples/trustzone/: Cargo.toml  README.md  run.sh  rust-toolchain.toml
examples/trustzone/.cargo/: config.toml
examples/trustzone/rt685s-evk-nonsecure/: Cargo.toml  build.rs  memory.x
examples/trustzone/rt685s-evk-nonsecure/src/: lib.rs
examples/trustzone/rt685s-evk-secure/: Cargo.toml  build.rs  memory.x
examples/trustzone/rt685s-evk-secure/src/: main.rs
src/: adc.rs  clocks.rs  crc.rs  espi.rs  flexcomm.rs  flexspi_nor_storage_bus.rs  flexspistorage.rs  fmt.rs  fsl_power.rs  gpio.rs  iopctl.rs  lib.rs  pwm.rs  rng.rs  rtc.rs  spi.rs  spistorage.rs  storage.rs  timer.rs  uart.rs  wwdt.rs
src/clocks/: config.rs  mod.rs  periph_helpers.rs
src/dma/: channel.rs  mod.rs  transfer.rs
src/flexspi/: mod.rs  nor.rs  nor_flash.rs  nor_storage_bus.rs  peripheral.rs
src/hashcrypt/: hasher.rs  mod.rs
src/i2c/: master.rs  mod.rs  slave.rs
src/time_driver/: ostimer.rs  rtc.rs
supply-chain/: audits.toml  config.toml
