[package]
name = "secure-app"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
mimxrt685s-pac = { version = "0.5.0", features = [
    "rt",
    "critical-section",
] }
mimxrt600-fcb = "0.2.2"
rtt-target = "0.6.1"
